css/bz.css
.bz-main-container {
	text-align: center;
	max-width: 40em;
	min-width: 35em;
	margin: 0 auto;
}
#bz-schedule-table {
	 border-collapse: collapse;
	 margin: 0 auto;
 }
#bz-schedule-table tr {
	margin: .25em;
	border-bottom: 1px solid #717171;
}
#bz-schedule-table tr:last-child {
	border-bottom: unset;
}
#bz-schedule-table td {
	padding: .5em;
	min-width: 6ch;
}
#bz-schedule {
	min-height: 16em;
	display: grid;
	place-items: center;
}
[data-status="on"] {
	color: var(--green);
}
[data-status="off"] {
	color: var(--red);
}
[data-status] {
	font-weight: bold;
}
@media(max-width:799px) {
	#bz-countdown {
		min-height: 5em;
		display: grid;
		place-items: center;
	}
	#main-container {
		min-width: 100%;
	}
}

